--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -42,6 +42,10 @@
   animation:hue 5000ms infinite linear;
 }
 
+.centerstage{
+  margin: auto;
+}
+
 @keyframes spinify {
   0% {
     transform: translate(0px,0px);
