project blog final

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -46,7 +46,7 @@
         </li>
 
         <li>
-          <a href="{% url 'post_draft_list' %}">Drafts</a>
+          <a href="{% url 'post_draft' %}">Drafts</a>
         </li>
         <li>
           <a href="{% url 'logout' %}" >Log out</a>
