--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -2,6 +2,21 @@
 
 {% block content %}
 
+    <h2>Draft posts</h2>
 
+    {% for post in posts %}
+
+      <div class="post">
+
+        <div class="date">created: {{ post.created_date|date:'d-m-Y' }}</p></div>
+
+           <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+
+           <p>{{ post.text|truncatechars:200 }}</p>
+
+      </div>
+
+
+    {% endfor %}
 
 {% endblock %}
