--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -2,6 +2,18 @@
 
 {% block content %}
 
+    <h1>New comment</h1>
 
+    <form method="POST" class="post-form">
+
+      {% csrf_token %}
+
+      {{form.as_p}}
+
+      <button type="submit" class="save btn btn-default">Post Comment</button>
+
+    </form>
+
+    <script>var editor = new MediumEditor('.editable');</script>
 
 {% endblock %}
