--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,28 +3,28 @@
 {% block content %}
 
   <h1 class="posttitle loader">{{ post.title }}</h1>
-
+  <h4>Created {{ post.create_date }}</h4>
   {% if post.published_date %}
       <div class="date postdate">
         {{ post.published_date }}
       </div>
   {% else %}
-      <a href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+      <a class="btn btn-warning" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
   {% endif %}
 
-  <p class="postcontent">{{ post.text }}</p>
+  <p class="postcontent">{{ post.text|safe|linebreaks }}</p>
 
   {% if user.is_authenticated %}
     <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}">
-      <span class="glyphicon glypicon-pencil"></span>
+      <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
     </a>
     <a class="btn btn-danger" href="{% url 'post_delete' pk=post.pk %}">
-      <span class="glyphicon glypicon-remove"></span>
+      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
     </a>
   {% endif %}
 
  <hr>
- <a href="{% url 'add_comment_to_post' pk=post.pk %}">Add Comment</a>
+ <a class="btn btn-success" href="{% url 'add_comment_to_post' pk=post.pk %}">Add Comment</a>
 
  {% for comment in post.comments.all %}
 
