--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+  <h1>Create new post</h1>
 
+  <form class="post-form" method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="save btn btn-default" name="button">Save</button>
+  </form>
+
+  <script>var editor = new MediumEditor('.editable');</script>
 
 {% endblock %}
